@@ -1,6 +1,7 @@
 1.1.15.dev0
  * Support for Borg BORG_PASSCOMMAND environment variable to read a password from an external file.
  * #55: Fix for missing tags/releases from Gitea and GitHub project hosting.
+ * Fix for Borg create error when using borgmatic's --dry-run and --verbosity options together.
 
 1.1.14
  * #49: Fix for typo in --patterns-from option.
